# nakanaori-agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  package-lock.json  package.json
agents/: README.md  pyproject.toml
agents/nakanaori/: __init__.py  confirmation_agent.py  emotion_guard_agent.py  fact_structurer_agent.py  listener_agent.py  orchestrator.py  teacher_brief_agent.py  workflow.py
agents/nakanaori/prompts/: fact_structurer.md  listener.md  teacher_brief.md
agents/nakanaori/schemas/: responses.py  teacher_brief.py
agents/tests/: test_workflow.py
aidlc-docs/: aidlc-state.md  audit.md
config/: README.md  google-tts-service-account.example.json  google-tts.env.example  kebbi-targets.env
docs/: CONTENT-LICENSE.md  architecture.md  demo-scenario.md  demo-video-script.md  devops.md  google-cloud-tts-setup.md  hackathon-appeal-plan.md  hackathon-staging-deploy.md  hackathon-submission.md  kebbi-dev-guide.md  proto-pedia-draft.md
scripts/: add-license-headers.sh  bootstrap-staging-gcp.sh  check-license-headers.sh  check-prompts.sh  dev-stack.sh  kebbi-deploy.sh  kebbi-ensure-sdk.sh  kebbi-logcat-clear.sh  kebbi-logcat.sh  kebbi-open-settings.sh  kebbi-set-api-url.sh  kebbi-status.sh  kebbi-target.sh  (+8 more)
services/api/: Dockerfile  package.json  pyproject.toml
services/api/nakanaori_api/: __init__.py  __main__.py  main.py  store.py
services/api/nakanaori_api/routes/: child_turn.py  health.py  sessions.py  teacher_brief.py
services/api/src/: app.ts  index.ts  load-env.ts  logger.ts  store.ts
services/api/src/routes/: tts.ts
(+110 files in other folders)
