[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nakanaori-agents"
version = "0.1.0"
description = "Nakanaori Agent — ADK multi-agent mediation for school conflicts"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["nakanaori"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["nakanaori"]
