[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nakanaori-api"
version = "0.1.0"
description = "Nakanaori Agent REST API (Cloud Run)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["nakanaori_api"]
